frontend/src/routes/styles.css
@use '../lib/styles/variables.scss' as *;

/* My variables */
:root {
  --white30: rgba(255, 255, 255, 0.3);
  --lightgrey80: rgba(150, 150, 150, 0.8);
  --darkgrey80: rgba(34, 34, 34, 0.8);
  --black30: rgba(0, 0, 0, 0.3);
  --black80: rgba(0, 0, 0, 0.8);
  --trans: rgba(0, 0, 0, 0);
  --default_padding: 1.2rem;
  --menu_left: 2rem;

  --color_bg_0: rgb(0, 42, 82);
  --color_bg_1: hsl(208, 100%, 8%);
  --color_bg_2: hsl(223, 100%, 1%);
  --color_bg_light_1: rgb(220, 220, 230);
  --color_bg_light_0: hsl(220, 50%, 60%);
  --color_bg_light_2: hsl(220, 0%, 100%);
}

body {
  margin: 0;
  overflow: hidden;
}

.background_gradient_dark {
  background-size: 100vw 100vh !important;
  background-image: linear-gradient(
    180deg,
    var(--color_bg_0) 0%,
    var(--color_bg_1) 25%,
    var(--color_bg_2) 75%
  ) !important;
}
.background_gradient_light {
  background-size: 100vw 100vh !important;
  background-image: linear-gradient(
    180deg,
    var(--color_bg_light_0) 0%,
    var(--color_bg_light_1) 40%,
    var(--color_bg_light_2) 100%
  ) !important;
}

h1,
h2,
p {
  font-weight: 400;
}

p {
  line-height: 1.5;
}

a {
  color: var(--cds-text-01);
  text-decoration: none;
}
.tooltip_link {
  color: var(--cds-text-05);
}

a:hover {
  color: green;
}

h1 {
  font-size: 2rem;
  text-align: center;
}

h2 {
  font-size: 1.5rem;
}

pre {
  font-size: 16px;
  font-family: var(--font_mono);
  border-radius: 3px;
  padding: 0.5em;
  overflow-x: auto;
}

.text-column {
  display: flex;
  max-width: 48rem;
  flex: 0.6;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
}

input,
button {
  font-size: inherit;
  font-family: inherit;
}

button:focus:not(:focus-visible) {
  outline: none;
}

@media (min-width: 720px) {
  h1 {
    font-size: 2.4rem;
  }
}

.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

/* Helper classes for spacing and layout */
.mt1 {
  margin-top: 1rem;
}
.mr1 {
  margin-right: 1rem;
}
.mb1 {
  margin-bottom: 1rem;
}
.ml1 {
  margin-left: 1rem;
}
.mt2 {
  margin-top: 2rem;
}
.mr2 {
  margin-right: 2rem;
}
.mb2 {
  margin-bottom: 2rem;
}
.ml2 {
  margin-left: 2rem;
}
.centered {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Carbon Buttons Overrides */
.save_button {
  color: green;
}
.save_button:hover {
  color: lightgreen;
}

/* Carbon Notification Overrides  */
.inline_notification {
  position: absolute;
  bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9999;
}

/* Carbon Code Snippet Overrides */
.bx--snippet--multi {
  max-width: unset;
}

/* Carbon Content Switcher Overrides */
.bx--content-switcher {
  display: flex;
  flex-wrap: wrap;
  row-gap: 0.25rem;
  align-items: stretch;
  justify-content: center;
  height: auto;
}
.bx--content-switcher-btn {
  max-width: 225px;
  border: 0.0625rem solid var(--cds-border-inverse, #161616);
}
.bx--content-switcher-btn::before {
  display: none;
}
@media only screen and (max-width: 767px) {
  .bx--content-switcher-btn {
    flex: 0 0 44px !important;
    width: 44px !important;
    min-width: unset !important;
    min-height: 44px;
    padding: 0 !important;
    display: flex !important;
    align-items: center !important;
    justify-content: center !important;
  }
}

/* Carbon Accordion Overrides - Admin Lists*/
.admin_list_item_headline {
  display: flex;
  align-items: center;
  gap: 1rem;
  padding-left: calc(var(--default_padding) / 2);
}
.admin_list_item_content {
  text-align: left;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: calc(var(--default_padding) / 2);
  padding-right: calc(var(--default_padding) / 2);
  width: calc(100vw - var(--default_padding) * 2);
}
.admin_list_button_group {
  display: flex;
  gap: 0.25rem;
}
.custom_accordion_content .bx--accordion__content {
  padding-right: 0;
}

/* Carbon Drop Container Overrides*/
.bx--file__drop-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

